--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Construção da Imagem Docker
-        run: echo "Executando o comando Docker Build"
-      - name: Envio da Imagem Docker
-        run: echo "Executando o comando Docker push"
+      - name: Construção e envio da Imagem Docker
+        uses: docker/build-push-action@v6
+        with:
+          context: ./src
+          push: true
+          file: ./src/Dockerfile
+          tags: |
+            gabrielpiske/fake-shop:latest
+            gabrielpiske/fake-shop:v${{ github.run_number }}
   
   cd:
     runs-on: ubuntu-latest
