--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,10 @@ jobs:
   cd:
     runs-on: ubuntu-latest
     needs: [ci]
+    permissions:
+      id-token: write
+      contents: read
+      actions: read
     steps:
       - name: Obter o codigo do projeto
         uses: actions/checkout@v4
@@ -44,5 +48,10 @@ jobs:
       - name: Configurar Kubectl
         run: aws eks update-kubeconfig --name aula-eks
 
-      - name: Deploy nos manifestos no kubernets
-        run: echo "Executando o comando kubectl apply"
+      - name: Aplicar os manifestos no kubernets
+        uses: Azure/k8s-deploy@v5
+        with:
+          manifests: |
+              ./k8s/deployment.yaml
+          images: |
+              gabrielpiske/fake-shop:v${{ github.run_number }}
